--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.0.1",
+    "@module-federation/nextjs-mf": "^7.0.8",
+    "next": "^12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
